--- a/SmartContract/Cargo.toml
+++ b/SmartContract/Cargo.toml
@@ -1,10 +1,10 @@
   
 [package]
 edition = "2018"
-name = "helloworld"
-description = "Basic hello world contract"
-license = "Apache-2.0"
-version = "0.1.0"
+name = "my_iota_sc"
+description = "This is a smart contract for ISCP (IOTA Smart Contract Protocol)"
+license = "MIT"
+version = "0.0.1"
 authors = ["Author name <author@email.address>"]
 repository = "https://github.com/user/project"
 
@@ -17,17 +17,8 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasplib = { path = "../wasplib/rust/wasplib" }
 
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
 console_error_panic_hook = { version = "0.1.6", optional = true }
 
-# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
-# compared to the default allocator's ~10K. It is slower than the default
-# allocator, however.
-#
-# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
