--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-      
+    
       "**/target": true,
       "**/Cargo.lock": true,
       
@@ -15,6 +15,8 @@
       "LICENSE" : true,
       "README.md" : true,
       
-      "wasplib" : true
+      "wasplib" : true,
+
+      "VSCode*.png" : true
     }
   }
