Made go.mod visible by default in vscode settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
       "**/pkg/*.js*" : true,
       "**/pkg/*.ts" : true,
 
-      "**/go.mod": true,
+      //"go.mod": true,
       "**/go.sum": true,
 
       "**/.git*" : true,
