--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
       "**/.git*" : true,
             
       "LICENSE" : true,
-      "README.md" : true,
+      "*.md" : true,
       
       "wasplib" : true,
 
