--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,9 @@
       "wasplib" : true,
 
       "VSCode*.png" : true
-    }
+    },
+    "go.testFlags": [
+      "-v",
+      //"-buildmode=exe" // Uncomment this on windows. Is is needed due to an issue caused by gcc when compiling the unit tests
+    ],
   }
