--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+######### General ignores
+*.png # png images in root
